k3d/dev/mqtt/mosquitto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  # namespace: envds-cloudy
spec:
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        # image: localhost:5000/envds/eclipse-mosquitto:2.0.14
        # image: envds-registry:36301/eclipse-mosquitto:2.0.14
        image: envds-registry:5000/core/eclipse-mosquitto:2.0.14
        resources:
          requests:
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 1883
          protocol: TCP
        # - name: https
        #   containerPort: 8883
        #   protocol: TCP
        volumeMounts:
            - name: mosquitto-config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            # - name: mosquitto-certs
            #   mountPath: /certs/ca.crt
            #   subPath: ca.crt
            # - name: mosquitto-certs
            #   mountPath: /certs/server.crt
            #   subPath: server.crt
            # - name: mosquitto-certs
            #   mountPath: /certs/server.key
            #   subPath: server.key
      volumes:
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
        # - name: mosquitto-certs
        #   configMap:
        #     name: mosquitto-certs
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  # namespace: envds-cloudy
spec:
  selector:
    app: mosquitto
  ports:
  - name: http
    protocol: TCP
    port: 1883
    targetPort: 1883
  # - name: https
  #   port: 8883
  #   targetPort: 8883
  type: LoadBalancer
  # type: ClusterIP
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: mosquitto-ingress
#   namespace: envds-cloudy
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
# spec:
#   rules:
#   - host: mosquitto.local
#     http:
#       paths:
#         - pathType: Prefix
#           path: "/"
#           backend:
#             service:
#               name: mosquitto
#               port: 
#                 number: 9001
